// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat component check the login menu, where user = [object Object] 1`] = `
<div>
  <div />
  <div
    className="InputBlock-block-1"
  >
    <input
      className="InputBlock-input-3"
      name="text"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Message"
      type="text"
      value=""
    />
    <button
      className="InputBlock-button-2"
      onClick={[Function]}
    >
      Send
    </button>
  </div>
</div>
`;

exports[`Chat component check the login menu, where user = undefined 1`] = `
<div>
  <div />
  <div
    className="InputBlock-block-1"
  >
    <input
      className="InputBlock-input-3"
      name="text"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <button
      className="InputBlock-button-2"
      onClick={[Function]}
    >
      Login
    </button>
  </div>
</div>
`;
